# toys

./: Cargo.toml  byte_ideas.md
.github/workflows/: test.yml
30by30/: ideas.md
IRC-web-app/: Cargo.toml
IRC-web-app/src/: main.rs
Rock-Paper-Scissors-cli/: Cargo.toml
Rock-Paper-Scissors-cli/src/: main.rs
hangman-cli/src/: main.rs
ticTacToe/: Cargo.toml  bug-hunt.rs
ticTacToe/src/: main.rs
to-dolist-delete/: Cargo.toml
to-dolist-delete/src/: main.rs
todo-cli/: Cargo.toml
todo-cli-additional-features/: Cargo.toml
todo-cli-additional-features/src/: main.rs
todo-cli/src/: main.rs
word-guess-cli/: Cargo.toml
word-guess-cli/src/: main.rs
