[package]
name = "IRC-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-server = "0.6.0"
futures = { version = "0.3.30", default-features = false }
futures-util = "0.3.30"
hyper = "1.4.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
